<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015 - 2016
  ~
  ~  Maximilian Hille <mh@lambdasoup.com>
  ~ Juliane Lehmann <jl@lambdasoup.com>
  ~
  ~ This file is part of Watch Later.
  ~
  ~ Watch Later is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Watch Later is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Watch Later.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="asset_prefix">default</string>

    <string name="app_name">Watch Later</string>

    <string name="title_activity_add">Watch Later</string>
    <string name="title_activity_about">About</string>

    <string name="menu_about">About</string>

    <string name="button_retry">Try again</string>
    <string name="activetext_help_no_channel">How can I change this?</string>

    <string name="success_added_video">Successfully added video to Watch Later playlist of <xliff:g example="Jane Smith" id="channel_title">%1$s</xliff:g></string>

    <string name="error_need_account">Error adding video: Needs access to your YouTube account.</string>
    <string name="error_other">Error adding video: Check your Internet connection and try again.</string>
    <string name="error_playlist_full">The Watch Later playlist of <xliff:g example="Jane Smith" id="channel_title">%1$s</xliff:g> is full.</string>
    <string name="error_not_a_video">This does not seem to be a video. Watchlater cannot add it to your Watch Later playlist. Please try opening it again using another app.</string>
    <string name="error_already_in_playlist">This video was already in the Watch Later playlist of <xliff:g example="Jane Smith" id="channel_title">%1$s</xliff:g>.</string>
    <string name="error_video_not_found">Could not add video to your Watch Later playlist: The video does not exist anymore.</string>
    <string name="error_account_has_no_channel">Cannot get access to your Watch Later playlist, because  the YouTube account has no channel.</string>

    <string name="choose_account">Choose account</string>
    <string name="error_no_account">No Google accounts found on this device.</string>
    <string name="menu_open">Open with YouTube</string>
    <string name="error_youtube_player_missing">Cannot launch the YouTube app: it is probably not installed on your device.</string>
    <string name="menu_help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="error_permission_required_accounts">Watch Later needs your permission to access the accounts configured on your device, so that it can access your YouTube account without knowing your password.</string>
    <string name="explanation">Watch Later is an alternative app to open YouTube links with. Opening a link places it automatically in your watchlater list. If the YouTube app is your default app for opening youtube links, this cannot work. You probably want to choose each time between opening with Watch Later and opening with YouTube. Try out your settings right now by pressing the \"Example\" button below!</string>
    <string name="button_example">Example</string>
    <string name="button_settings_youtube">YouTube settings</string>
    <string name="no_youtube_settings_activity">Could not open settings for YouTube. Sorry.</string>
    <string name="button_settings_watchlater">Watch Later settings</string>
    <string name="no_watchlater_settings_activity">Could not open settings for the Watch Later application. Sorry.</string>
    <string name="button_settings_all_apps">Application settings</string>
    <string name="no_app_settings_activity">Could not open your application settings. Sorry.</string>
    <string name="defaults_advice_adjust_both">You should adjust the \"Open by default\" settings for both YouTube and Watch Later. Clear the defaults so that they are not set as default.</string>
    <string name="defaults_advice_ok">Your configuration is fine, everything should work!</string>
    <string name="defaults_advice_youtube_choice_missing">Your defaults settings for Watch Later are fine. The YouTube app seems to be missing. You should make sure that it is installed.</string>
    <string name="defaults_advice_watchlater_choice_missing">Your defaults settings for YouTube are fine. Something seems to be wrong with the defaults settings for Watch Later, or maybe some other app for displaying YouTube content.</string>
    <string name="defaults_advice_both_choice_missing">Something seems to be wrong with the defaults settings for Watch Later and YouTube, or maybe some other app for displaying YouTube content.</string>
    <string name="defaults_advice_youtube_default">You should adjust the \"Open by default\" settings for the YouTube app. Clear the defaults so that it is not set as default.</string>
    <string name="defaults_advice_watchlater_default">You should adjust the \"Open by default\" settings for the Watch Later app. Clear the defaults so that it is not set as default.</string>
    <string name="defaults_advice_other_app_default">You should adjust the \"Open by default\" settings for the %1$s app. Clear the defaults so that it is not set as default.</string>
    <string name="no_youtube_installed">The YouTube app is not installed.</string>
    <string name="always_use_this_account">Always use this account</string>
    <string name="button_add_with_selected_account">Add video</string>
    <string name="pref_youtube_accounts">YouTube accounts</string>
    <string name="pref_default_account_name_title">Clear default account</string>
    <string name="pref_default_account_name_no_default">You have not chosen a default account to use.</string>
    <string name="pref_default_account_name_summary">Always use %1$s</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="button_open_with_youtube">Open with YouTube</string>
    <string name="text_in_channel_wl">In your <xliff:g example="Jane Smith" id="channel_title">%1$s</xliff:g> Watch Later list</string>
    <string name="button_add_to_channel_wl">Add to <xliff:g example="Jane Smith" id="channel_title">%1$s</xliff:g> Watch Later</string>

</resources>
