<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 - 2016
  ~
  ~  Maximilian Hille <mh@lambdasoup.com>
  ~ Juliane Lehmann <jl@lambdasoup.com>
  ~
  ~ This file is part of Watch Later.
  ~
  ~ Watch Later is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Watch Later is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Watch Later.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_account_settings"
        android:title="@string/pref_youtube_accounts">
        <Preference
            android:key="pref_key_default_account_name"
            android:title="@string/pref_default_account_name_title"
            android:summary="@string/pref_default_account_name_summary"
            android:enabled="false"/>
    </PreferenceCategory>


</PreferenceScreen>