<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015.
  ~
  ~  Maximilian Hille <mh@lambdasoup.com>
  ~ Juliane Lehmann <jl@lambdasoup.com>
  ~
  ~ This file is part of Watch Later.
  ~
  ~ Watch Later is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Watch Later is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Watch Later.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout android:id="@+id/account_chooser"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/account_chooser_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/choose_account"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        />

    <ListView
        android:id="@+id/account_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/checkbox_always_use_selected_account"
        android:layout_below="@id/account_chooser_header"
        android:choiceMode="singleChoice"/>

    <CheckBox
        android:id="@+id/checkbox_always_use_selected_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_add_with_selected_account"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:id="@+id/account_always_use_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkbox_always_use_selected_account"
        android:layout_toEndOf="@id/checkbox_always_use_selected_account"
        android:layout_toRightOf="@id/checkbox_always_use_selected_account"
        android:text="@string/always_use_this_account"
        />

    <Button
        android:id="@+id/button_add_with_selected_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:enabled="false"
        android:text="@string/button_add_with_selected_account"/>
</RelativeLayout>