<!--
  ~ Copyright (c) 2015.
  ~
  ~  Maximilian Hille <mh@lambdasoup.com>
  ~ Juliane Lehmann <jl@lambdasoup.com>
  ~
  ~ This file is part of Watch Later.
  ~
  ~ Watch Later is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Watch Later is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Watch Later.  If not, see <http://www.gnu.org/licenses/>.
  -->

<com.lambdasoup.watchlater.WatchlaterDialogContent
    android:id="@+id/progress_animator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="256sp"
    android:inAnimation="@android:anim/fade_in"
    android:outAnimation="@android:anim/fade_out"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lambdasoup.watchlater.AddActivity">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>


    <LinearLayout
        android:id="@+id/success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/success_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_added_video"/>

        <TextView
            android:id="@+id/success_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_text_sep"
            android:ellipsize="end"
            android:maxLines="2"
            android:textStyle="bold"
            tools:text="Title: The movie with the giant super long title to end all titles and fill so much space you won't believe it"/>

        <TextView
            android:id="@+id/success_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_text_sep"
            android:ellipsize="end"
            android:maxLines="8"
            tools:text="This masterpiece of online video entertainment uses cutting edge paint animations and a splashy kitchenware soundscape to evoke deep feelings of transient text production and content filling. It will keep you entertained for as long as you can stand it, and never let you go. Thus, it needs to go on for just a little bit more to fill some  more space and extend in it, too."/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            tools:text="Could not query moon crater list"/>

        <Button
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="onRetry"
            android:text="@string/button_retry"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account_chooser"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/account_chooser_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/choose_account"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />

        <ListView
            android:id="@+id/account_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/account_chooser_header"
            android:layout_above="@+id/checkbox_always_use_selected_account"
            android:choiceMode="singleChoice"
            android:listSelector="#666666"/>

        <CheckBox
            android:id="@+id/checkbox_always_use_selected_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_add_with_selected_account"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />
        <TextView
            android:id="@+id/account_always_use_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/always_use_this_account"
            android:layout_alignBaseline="@+id/checkbox_always_use_selected_account"
            android:layout_toRightOf="@id/checkbox_always_use_selected_account"
            android:layout_toEndOf="@id/checkbox_always_use_selected_account"
            />
        <Button
            android:id="@+id/button_add_with_selected_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/button_add_with_selected_account"
            android:onClick="onMultiAccountDone"
            android:enabled="false"/>
    </RelativeLayout>

</com.lambdasoup.watchlater.WatchlaterDialogContent>